# aiidalab-ispg

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  FuntionJ.ipynb  LICENSE  README.md  __init__.py  atmospec.ipynb  conformer_generation.ipynb  example.ipynb  mkdocs.yml  optimization.ipynb  orca_optimization.ipynb  post_install  pyproject.toml  read_in_data.ipynb  requirements-test.txt  setup.cfg  setup.py  setup_codes_on_localhost.sh  spectrum_widget.ipynb  start.py  workflow_workspace.ipynb
.github/workflows/: ci.yml
PreCode/: FuntionJ.ipynb  ReadMe.txt  j_componets_calc (1).ipynb
aiidalab_ispg/: __init__.py  __init__py.py  atmospec_steps.py  conformers.py  input_widgets.py  optimization_steps.py  process.py  spectrum.py  spectrum_analysis.py  steps.py  structures.py  utils.py  widgets.py  wigner.py  wigner_position.py  wigner_test.py
aiidalab_ispg/app/: __init__.py  atmospec_steps.py  conformers.py  input_widgets.py  optimization_steps.py  spectrum.py  spectrum_analysis.py  steps.py  utils.py  widgets.py
aiidalab_ispg/app/experimental_spectra/: .gitignore  acrolein.yaml  glycolaldehyde.yaml  import_experimental_spectrum.py  methylhydroperoxide.yaml
aiidalab_ispg/app/parameters/: orca.yaml
aiidalab_ispg/app/qeapp/: __init__.py  process.py  structures.py  widgets.py
aiidalab_ispg/app/static/: StandardActinicFluxes2.csv  welcome.jinja
aiidalab_ispg/experimental_spectra/: acrolein.yaml  import_experimental_spectrum.py  methylhydroperoxide.yaml
aiidalab_ispg/parameters/: __init__.py  orca.yaml
aiidalab_ispg/qeapp/: README  process.py  widgets.py
aiidalab_ispg/static/: pinacolone_pbe0_6311pgs_n256_gauss0.05.nm.tsv  welcome.jinja  workflow_summary.jinja
aiidalab_ispg/widget_viewers/: viewers.py
aiidalab_ispg/wigner/: __init__.py  wigner.py
aiidalab_ispg/wigner_test/: freq_g09.molden  freq_single.molden  opt_anfreq_mp2_avdz_orca_nofrozencore.hess  orcahess2molden.awk  test.sh
aiidalab_ispg/workflows/: __init__.py  atmospec.py  base.py  harmonic_wigner.py  optimization.py  utils.py  wigner.py
atmospec_workflows/: __init__.py
docs/: index.md  install.md  requirements.txt
docs/custom_theme/: no_toc.html
notebooks/: atmospec.ipynb  conformer_generation.ipynb  optimization.ipynb  spectrum_widget.ipynb  workflow_workspace.ipynb
tests/: conftest.py  docker-compose.yml  test_app.py
tests/app/: conftest.py  docker-compose.yml  test_app.py
tests/wigner/: .gitignore  tst_wigner.py
tests/wigner/wigner_test/: freq_g09.molden  opt_anfreq_mp2_avdz_orca_nofrozencore.hess  orcahess2molden.awk
workflows/: README.md  setup.cfg
workflows/aiidalab_atmospec_workchain/: __init__.py  optimization.py  wigner.py
workflows/tests/wigner/: test.sh  tst_wigner.py
workflows/tests/wigner/wigner_test/: freq_orca.molden  freq_test.molden  test.sh
