[build-system]
# Version 64.0.0 is needed for editable installs without setup.py file
# https://setuptools.pypa.io/en/latest/references/keywords.html
requires = [
    "setuptools>=64.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.bumpver]
current_version = "0.2.0a2"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"setup.cfg" = [
    'version = {version}',
]
"aiidalab_ispg/__init__.py" = [
    '__version__ = "{version}"',
]
