[build-system]
# Version 64.0.0 is needed for editable installs without setup.py file
# https://setuptools.pypa.io/en/latest/references/keywords.html
requires = [
    "setuptools>=64.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
# TODO: Enable ruff for notebooks
src = ["aiidalab_ispg", "tests"]
target-version = "py39"

# Enable pyflakes and pyf-builtins, pyflakes, f=bugbear
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "E",    # pycodestyle
    "F",    # pyflakes
    "C90",  # McCabe code complexity
    "UP",   # pyupgrade
    "S",    # bandit
    "C4",   # comprehensions
    "EM",   # errormsg
    "ISC",  # implicit concatenation
    "ICN",  # import convention
    "INP",  # no implicite namespace package
    "PIE",  #
    "PT",   # pytest style
    "PTH",
    "PLC",
    "PLE",
    "PLW",
    "RUF",
    # "PL",  # pylint, disabled for now
    # "PLR", # pylint refactor
]

# Never enforce `E501` (line length violations).
# TODO: Remove all asserts from the codebase and enable this rule
# Use of assert detected (S101)
ignore = ["E501", "S101", "PT004", "PTH123"]

[tool.bumpver]
current_version = "v0.2.2"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"setup.cfg" = [
    'version = {pep440_version}',
]
"aiidalab_ispg/__init__.py" = [
    '__version__ = "{pep440_version}"',
]
