[aiidalab]
title = ISPG Apps
description = AiiDALab applications from the ISPG crew
categories = quantum

[metadata]
name = aiidalab-ispg
version = 0.2.4
author = Daniel Hollas
author_email = daniel.hollas@bristol.ac.uk
description = ISPG applications in AiiDALab
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/danielhollas/aiidalab-ispg
project_urls =
    Logo = https://insilicophotochem.files.wordpress.com/2020/01/squirrel-logo.png
    Documentation = https://github.com/danielhollas/aiidalab-ispg/#readme
    Bug Tracker = https://github.com/danielhollas/aiidalab-ispg/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha

[options]
packages = find:
python_requires = >=3.9
install_requires =
    aiidalab-widgets-base[smiles]==2.3.1
    aiida-orca~=0.7.0
    bokeh~=2.4
    xtb~=22.1
    traitlets~=5.4
    ipywidgets~=7.7
    rdkit<2025

[options.extras_require]
test = file: requirements-test.txt

[options.package_data]
aiidalab_ispg.app.static =
  *.png
  *.jinja
  *.css
  *.csv

[options.entry_points]
aiida.workflows =
    ispg.atmospec = aiidalab_ispg.workflows:AtmospecWorkChain
    ispg.conformer_opt = aiidalab_ispg.workflows.optimization:ConformerOptimizationWorkChain
aiida.calculations =
    ispg.wigner = aiidalab_ispg.workflows:generate_wigner_structures
